# qingpi

./: .gitmodules  README.md
_pcb/: README.md  fp-lib-table  pcb.kicad_pcb  pcb.kicad_sch  sym-lib-table
app/: .gitignore  Makefile  README.md  pyproject.toml
app/app/: __main__.py  button.py  hat.py  slidepad.py  touchscreen.py  ui.py
doc/: touch_screen.xcf
firmware/: CMakeLists.txt  README.md  platformio.ini
firmware/.devcontainer/: Dockerfile  devcontainer.json
firmware/include/: adapters.h
firmware/include/3ds/: button.h  slidepad.h  touchscreen.h
firmware/lib/3ds/: button.h  common.h  hat.h  slidepad.h  touchscreen.h
firmware/lib/ad840x/: ad840x.cpp  ad840x.h
firmware/lib/adg801/: adg801.cpp  adg801.h
firmware/lib/ds4432/: ds4432.cpp  ds4432.h
firmware/lib/g3vm_xwr/: g3vm_xwr.h
firmware/lib/ncm/: CMakeLists.txt
firmware/lib/ncm/include/: ncm.h
firmware/lib/ncm/src/: button.c  hat.c  slidepad.c  touchscreen.c
firmware/lib/ncm/test/: test.c  test_dac.h  test_digipot.h  test_gpio.h  test_switch.h
firmware/lib/nxmc2/: nxmc2.h
firmware/lib/qingpi/: CMakeLists.txt
firmware/lib/qingpi/include/: qingpi.h
firmware/lib/qingpi/src/: button.c  hat.c  slidepad.c  touchscreen.c
firmware/lib/qingpi/test/: test.c  test_dac.h  test_digipot.h  test_gpio.h  test_switch.h
firmware/lib/qingpi_adapters/: ad840x_adapter.cpp  ad840x_triple_adapter.cpp  adg801_adapter.cpp  ds4432_adapter.cpp  gpio_adapter.cpp  qingpi_adapters.h
firmware/lib/sml_lx0404siupgusb/: CMakelists.txt  README.md
firmware/lib/sml_lx0404siupgusb/include/: sml_lx0404siupgusb.h
firmware/lib/sml_lx0404siupgusb/src/: null_digital_output.c  sml_lx0404siupgusb.c
firmware/lib/sml_lx0404siupgusb/test/: analog_output_mock.h  test.c
firmware/lib/sml_lx0404siupgusb_arduino_adapter/: analog_adapter.cpp  digital_adapter.cpp  sml_lx0404siupgusb_arduino_adapter.h
firmware/lib/xtrbss/: CMakeLists.txt
firmware/lib/xtrbss/include/: xtrbss.h
firmware/lib/xtrbss/src/: button.c  hat.c  slidepad.c  touchscreen.c
firmware/lib/xtrbss/test/: test.c
firmware/src/: 3ds.h  CMakeLists.txt  ad840x.h  ad840x_adapter.cpp  ad840x_adapter.h  ad840x_triple_adapter.cpp  ad840x_triple_adapter.h  adg752.h  adg801_adapter.cpp  adg801_adapter.h  button.c  button.h  ds4432.h  ds4432_adapter.cpp  ds4432_adapter.h  g3vm_x1wr.h  gpio_adapter.cpp  gpio_adapter.h  hat.h  main.c  main.cpp  mcp4922.h  queue.c  queue.h  router.c  router.h  slidepad.c  slidepad.h  touchscreen.c  touchscreen.h  utility.h
firmware/src/3ds/: CMakeLists.txt  button.cpp  slidepad.cpp  touchscreen.cpp
flex/: 3ds.kicad_sym  501461-0491_fpc.kicad_sym  flex.kicad_pro  flex.kicad_sch  fp-lib-table  sym-lib-table
logo/: .gitignore  Makefile  generate_svg.sh
ncm/: README.md  pyproject.toml
ncm/ncm/: ncm.py  (+1 more)
pcb/: .gitignore  README.md  fp-lib-table  list.txt  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  setup.py  sym-lib-table
qingpi-python/: .gitignore  Makefile  README.md  pyproject.toml
qingpi-python/qingpi/: __init__.py  __init__.pyi  __main__.py  qingpi.py  qingpi.pyi
qingpi-python/qingpi/controller/: util.py
qingpi-python/qingpi/gui/: button.py  button.pyi  gui.py  gui.pyi  hat.py  hat.pyi  icon.py  icon.pyi  slidepad.py  slidepad.pyi  touchscreen.py  touchscreen.pyi  util.py  util.pyi
qingpi-python/tests/: __main__.py
qingpi-python/tools/: create_zip_archive.py  replace.py
tools/: .gitignore  README.md  calibrate_slidepad.py  plot_image.py  pyproject.toml  requirements.txt  simulate.py  slidepad.py  touchscreen.py  write_line.py
(+16 files in other folders)
