[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Koutaro Mukai <mukai.k1011k@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
qingpi-python = {path = "../qingpi-python"}
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
