[tool.poetry]
name = "qingpi-python"
version = "0.1.4"
description = "Python library for Qingpi."
authors = ["Koutaro Mukai <mukai.k1011k@outlook.jp>"]
homepage = "https://github.com/U-1F992/qingpi"
repository = "https://github.com/U-1F992/qingpi"
readme = "README.md"
packages = [
    { include = "qingpi", from = "." }
]

[tool.poetry.dependencies]
# python = "^3.10"  # not match because pyinstaller (6.3.0) requires Python <3.13,>=3.8
python = ">=3.10,<3.13"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
